--- a/rent_film/rent_film_app/src/app/dialog-component/dialog-component.component.html
+++ b/rent_film/rent_film_app/src/app/dialog-component/dialog-component.component.html
@@ -1,8 +1,13 @@
-<section>
-<h1 mat-dialog-title>{{data.text}}</h1>
+<section class="component-style" >
+<mat-dialog-content class="dialog-generic-style" tabindex="-1" role="dialog" aria-label="Dialog" >
+  <h2 mat-dialog-title  id="{{data.text}}" class="title-dialog" tabindex="0" aria-label="dialog-description" >{{data.text}}</h2>
 
-<div mat-dialog-actions>
-  <button mat-button (click)="onNoClick()">Close</button>
-</div>
+  <mat-dialog-actions align="end">
+    <button mat-button class="close" aria-label="Close dialog" role="button" title="Button for close dialog" (click)="close()" >
+      <mat-icon aria-hidden="true">close</mat-icon>
+      Close
+    </button>
+  </mat-dialog-actions>
 
+</mat-dialog-content >
 </section>
