--- a/rent_film/rent_film_app/src/styles.css
+++ b/rent_film/rent_film_app/src/styles.css
@@ -27,3 +27,15 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   color:black;
   border: 2px solid black;
 }
+
+
+.component-style .dialog-generic-style{
+  background-color: #EDEDED;
+  color:black;
+}
+.component-style .dialog-window{
+  background-color: #EDEDED;
+  color:black;
+}
+
+
