--- a/rent_film/rent_film_app/src/app/dialog-component/dialog-component.component.html
+++ b/rent_film/rent_film_app/src/app/dialog-component/dialog-component.component.html
@@ -1,6 +1,6 @@
-<section class="component-style" >
+<section class="component-style" tabindex="-1" >
 <mat-dialog-content class="dialog-generic-style" tabindex="-1" role="dialog" aria-label="Dialog" >
-  <h2 mat-dialog-title  id="{{data.text}}" class="title-dialog" tabindex="0" aria-label="dialog-description" >{{data.text}}</h2>
+  <h2 mat-dialog-title  tabindex="0" >{{data.text}}</h2>
 
   <mat-dialog-actions align="end">
     <button mat-button class="close" aria-label="Close dialog" role="button" title="Button for close dialog" (click)="close()" >
