--- a/rent_film/rent_film_app/src/app/rent/rent.component.html
+++ b/rent_film/rent_film_app/src/app/rent/rent.component.html
@@ -1,39 +1,38 @@
-
-<div class="component-style"  fxLayout="column" fxLayoutAlign="center center">
+<div class="component-style"  fxLayout="column" fxLayoutAlign="center center" tabindex="-1">
   <mat-card >
-    <mat-card-title class="card-title">
-      <strong>{{film.film.title}}</strong>
+    <mat-card-title class="card-title" tabindex="0">
+      <p > <strong>{{film.film.title}}</strong> </p>
       <br>
     </mat-card-title>
     <mat-card-content >
-      <form [formGroup]="form" (ngSubmit)="rent()"> 
+      <form [formGroup]="form" aria-label="rent form">
 
-        <mat-form-field  > 
-          <mat-label aria-label="Select a date for rent">Select a date for rent</mat-label> 
-          <mat-select #dayOption formControlName="data"  > 
-            <mat-option  value="today"  (click)="click_data(true)">Today</mat-option> 
-            <mat-option  value="in-two-days"  (click)="click_data(true)">In two days</mat-option> 
-          </mat-select> 
-        </mat-form-field> 
- 
-        <mat-form-field > 
-          <mat-label aria-label="Select a store">Select a store</mat-label> 
-          <mat-select formControlName="store" > 
-            <mat-option #matOption *ngFor="let store of stores" [value]="store" [disabled]="!store.num_film" (click)="click_store(matOption.selected)" >{{store.address.address}}</mat-option> 
-          </mat-select> 
-        </mat-form-field> 
-        <br> 
- 
-        <button mat-raised-button  type="submit" aria-describedby="error-message" (click)="rent()">Rent</button>
-          <ul *ngIf="errors.length > 0" class="error-message" id="error-message">
-              <li *ngFor="let error of errors">{{ error }}</li>
+        <mat-form-field  >
+          <mat-label aria-label="Select a date for rent">Select a date for rent</mat-label>
+          <mat-select #dayOption formControlName="data" [(ngModel)]="selectedValueData" name="data" aria-required="true">
+            <mat-option  value="today"  (click)="click_data(true)">Today</mat-option>
+            <mat-option  value="in-two-days"  (click)="click_data(true)">In two days</mat-option>
+          </mat-select>
+        </mat-form-field>
+
+        <mat-form-field >
+          <mat-label aria-label="Select a store">Select a store</mat-label>
+          <mat-select #matOption  formControlName="store" [(ngModel)]="selectedValueStore" name="store"  aria-required="true">
+            <mat-option #matOption *ngFor="let store of stores" [value]="store" [disabled]="!store.num_film" [attr.aria-disabled]="!store.num_film ? 'true' : 'false'"  (click)="click_store(matOption.selected)" >{{store.address.address}}</mat-option>
+          </mat-select>
+        </mat-form-field>
+        <br>
+
+        <button mat-raised-button  type="button" aria-label="Rent button" aria-describedby="error-message" autofocus (click)="rent()">Rent</button>
+          <ul *ngIf="errors.length > 0" class="error-message" id="error-message" aria-label="Errors found" tabindex="0">
+              <li *ngFor="let error of errors" tabindex="0">{{ error }}</li>
           </ul>
- 
- 
-    </form> 
-    </mat-card-content> 
- 
-  </mat-card> 
+
+
+    </form>
+    </mat-card-content>
+
+  </mat-card>
 </div>
 
 
