--- a/rent_film/rent_film_app/src/app/dashboard/dashboard.component.html
+++ b/rent_film/rent_film_app/src/app/dashboard/dashboard.component.html
@@ -1,13 +1,13 @@
 <div class="content component-style" >
   <mat-form-field class="field">
-    <input matInput placeholder="Search a film" type="text" role="searchbox" aria-label="Search film" (input)="onSearchTitleChange($event)" />
+    <input matInput placeholder="Search a film" type="text" role="searchbox" (input)="onSearchTitleChange($event)" />
     <mat-icon matPrefix aria-hidden="true">search</mat-icon>
   </mat-form-field>
 
   <span class="spacer"></span>
 
   <mat-form-field class="field">
-    <mat-select  aria-label="Filter by category" placeholder="Filter by category" >
+    <mat-select aria-label="Filter by category" placeholder="Filter by category" >
       <mat-option *ngFor="let category of categories" role="option" [value]="category" (click)="filterByCategory(category)">
         {{category.name}}
       </mat-option>
@@ -19,25 +19,27 @@
 <div role="list" class="component-style">
   <mat-card class="item" role="listitem" aria-label="Films items" *ngFor="let film of films | slice: startIndex: endIndex" >
     <mat-card-header>
-      <mat-card-title class="title" aria-label="Film title">
-        <a class="link_details" href="javascript:void(0)" (click)="openDetails(film)">{{film.film.title}} </a>
+    <mat-card-title class="title" aria-label="Film title">
+        <a class="link_details" href="javascript:void(0)"  (click)="openDetails(film)"> {{film.film.title}} </a>
       </mat-card-title>
     </mat-card-header>
 
     <mat-card-content>
-      <p tabindex="0"><strong>Anno di uscita:</strong> {{ film.film.release_year }}</p>
-      <p tabindex="0"><strong>Lingua:</strong> {{ film.language.name }}</p>
-      <p tabindex="0"><strong>Genere:</strong> {{ film.category.name }}</p>
-      <p tabindex="0"><strong>Descrizione:</strong> <br>{{ film.film.description }}</p>
-      <p tabindex="0">{{ film.film.rating }}</p>
+      <p tabindex="0"><strong>Year:</strong> {{ film.film.release_year }}</p>
+      <p tabindex="0"><strong>Language:</strong> {{ film.language.name }}</p>
+      <p tabindex="0"><strong>Category:</strong> {{ film.category.name }}</p>
+      <p tabindex="0"><strong>Description:</strong> <br>{{ film.film.description }}</p>
+      <p tabindex="0"><strong>Rating:</strong> {{ film.film.rating }}</p>
     </mat-card-content>
 
     <mat-card-actions align="end">
-      <button mat-button aria-label="Rent button" role="button" title="Button for rent film"  (click)="rent_page(film)">
-        {{ film.film.rental_rate }} NOLEGGIA
-        <mat-icon>
-          <span aria-hidden="true">euro</span>
-        </mat-icon>
+      <button mat-button aria-label="Rent film button price" role="button" title="Rent film button"  (click)="rent_page(film)">
+        <a tabindex="0">
+          <mat-icon>
+          <span aria-hidden="true" style="font-size: 15px;">euro</span>
+          </mat-icon>
+          {{ film.film.rental_rate }} RENT
+        </a>
       </button>
     </mat-card-actions>
   </mat-card>
