--- a/rent_film/rent_film_app/src/app/login/login.component.html
+++ b/rent_film/rent_film_app/src/app/login/login.component.html
@@ -1,11 +1,11 @@
-<section aria-label="Page Content" class="component-style">
-  <div class="login" aria-label="login-form-page" role="form" fxLayout="column" fxLayoutAlign="center center">
+<section class="component-style" tabindex="-1">
+  <div class="login" role="form" fxLayout="column" fxLayoutAlign="center center" tabindex="-1">
 
     <mat-card>
       <mat-card-content>
         <h2>Login</h2>
 
-        <form [formGroup]="form" (ngSubmit)="login()" role="form" aria-label="login-form" class="login_">
+        <form [formGroup]="form" (ngSubmit)="login()" role="form" aria-label="form login" class="login_">
 
           <mat-form-field >
             <input matInput placeholder="Username" formControlName="email" [(ngModel)]="email" name="email" aria-label="Username">
@@ -16,11 +16,11 @@
           </mat-form-field>
 
           <div class="div_button">
-            <button mat-raised-button type="submit" role="button" title="Clicca qui per effettuare il login" aria-label="login-button">Login</button>
-            <button mat-raised-button [routerLink]="['/registration']" role="button" title="Clicca qui per registrare un nuovo utente" aria-label="register-button">Registrati</button>
+            <button mat-raised-button type="submit" role="button" title="Click here for login" aria-label="login button">Login</button>
+            <button mat-raised-button [routerLink]="['/registration']" role="button" title="Click for registration" aria-label="register button">Registrati</button>
           </div>
           <ul *ngIf="errors.length > 0" class="error-message" >
-            <li *ngFor="let error of errors">{{ error }}</li>
+            <li *ngFor="let error of errors; index i" tabindex="0"><label>{{ error }}</label></li>
         </ul>
 
         </form>
