--- a/rent_film/rent_film_app/src/app/rent-details/rent-details.component.css
+++ b/rent_film/rent_film_app/src/app/rent-details/rent-details.component.css
@@ -1,45 +1,65 @@
 .dialog-window {
-  display: block;
+  display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   font-family: Calibri;
   font-size: 20px;
 }
 
-
-.title {
-  display: block;
+.dialog-content-wrapper {
+  flex: 1;
+  overflow-y: auto;
+  padding: 100px;
 }
 
-.title h2{
-  margin-bottom: -10px;
-
-  padding: 40px;
-  padding-top: 50px;
-  font-family:serif;
-  font-size: 50px;
+.list {
+  margin-left: 10px;
 }
 
-.dialog-content{
-  padding: 40px;
-  padding-left:70px ;
+.close {
+  float: right;
 }
 
-
-mat-card-actions{
-  justify-content: flex-end;
-  padding-bottom: 0;
+.title-dialog {
+  margin-bottom: 20px;
+  font-family: serif;
+  font-size: 30px;
 }
 
-.content-rent{
+.rent-button {
   display: flex;
   justify-content: center;
   align-items: center;
   margin-top: 20px;
 }
 
-.button-rent{
+.button-rent {
   font-size: large;
-  padding: 5%;
+  margin-bottom: 2px;
+}
+
+@media screen and (max-width: 768px) {
+  .dialog-window {
+    height: 300px;
+    overflow-y: auto;
+  }
+  .title-dialog {
+    font-size: 30px;
+  }
+  .button-rent {
+    font-size: medium;
+  }
+}
+
+@media screen and (orientation: landscape) {
+  .dialog-window {
+    height: 300px;
+    overflow-y: auto;
+    overflow-x: auto;
+  }
+  .dialog-content-wrapper {
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 100px;
+  }
 }
