--- a/rent_film/rent_film_app/src/app/dashboard/dashboard.component.html
+++ b/rent_film/rent_film_app/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="content component-style" >
   <mat-form-field class="field">
-    <input matInput placeholder="Search a film" type="text" role="searchbox" (input)="onSearchTitleChange($event)" />
+    <input matInput placeholder="Search a film" type="text" role="searchbox" aria-label="Search film box" (input)="onSearchTitleChange($event)" />
     <mat-icon matPrefix aria-hidden="true">search</mat-icon>
   </mat-form-field>
 
