--- a/rent_film/rent_film_app/src/app/rent/rent.component.html
+++ b/rent_film/rent_film_app/src/app/rent/rent.component.html
@@ -1,7 +1,7 @@
 <div class="component-style"  fxLayout="column" fxLayoutAlign="center center" tabindex="-1">
   <mat-card >
     <mat-card-title class="card-title" tabindex="0">
-      <p > <strong>{{film.film.title}}</strong> </p>
+      <h2> <strong>{{film.film.title}}</strong> </h2>
       <br>
     </mat-card-title>
     <mat-card-content >
@@ -23,7 +23,7 @@
         </mat-form-field>
         <br>
 
-        <button mat-raised-button  type="button" aria-label="Rent button" aria-describedby="error-message" autofocus (click)="rent()">Rent</button>
+        <button mat-raised-button  type="button" aria-label="Rent button" [attr.aria-labelledby]="hasErrors ? 'error-message' : null" autofocus (click)="rent()">Rent</button>
           <ul *ngIf="errors.length > 0" class="error-message" id="error-message" aria-label="Errors found" tabindex="0">
               <li *ngFor="let error of errors" tabindex="0">{{ error }}</li>
           </ul>
