--- a/rent_film/rent_film_app/src/app/film-details/film-details.component.html
+++ b/rent_film/rent_film_app/src/app/film-details/film-details.component.html
@@ -1,4 +1,4 @@
-<div  class="component-style">
+<div  class="component-style" tabindex="-1">
 <mat-dialog-content  class="dialog-window" tabindex="-1" role="dialog" aria-label="dialog film details" >
 
   <mat-dialog-actions align="end">
