--- a/rent_film/rent_film_app/src/app/login/login.component.html
+++ b/rent_film/rent_film_app/src/app/login/login.component.html
@@ -8,16 +8,18 @@
         <form [formGroup]="form" (ngSubmit)="login()" role="form" aria-label="form login" class="login_">
 
           <mat-form-field >
-            <input matInput placeholder="Username" formControlName="email" [(ngModel)]="email" name="email" aria-label="Username">
+            <label for="email">Email</label>
+            <input matInput  formControlName="email" [(ngModel)]="email" name="email" id="name" aria-label="Username">
           </mat-form-field>
 
           <mat-form-field >
-            <input matInput placeholder="Password" formControlName="password" [(ngModel)]="password" name="password" type="password" aria-label="Password">
+            <label for="password">Password</label>
+            <input matInput formControlName="password" [(ngModel)]="password" name="password" id="password" type="password" aria-label="Password">
           </mat-form-field>
 
           <div class="div_button">
-            <button mat-raised-button type="submit" role="button" title="Click here for login" aria-label="login button">Login</button>
-            <button mat-raised-button [routerLink]="['/registration']" role="button" title="Click for registration" aria-label="register button">Registrati</button>
+            <button mat-raised-button type="submit" role="button" title="Click here for login" aria-label="login button"><span> Login </span></button>
+            <button mat-raised-button [routerLink]="['/registration']" role="button" title="Click for registration" aria-label="registration button"><span> Registration </span></button>
           </div>
           <ul *ngIf="errors.length > 0" class="error-message" >
             <li *ngFor="let error of errors; index i" tabindex="0"><label>{{ error }}</label></li>
