--- a/rent_film/rent_film_app/src/app/dashboard/dashboard.component.html
+++ b/rent_film/rent_film_app/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,7 @@
 <div class="content component-style" >
   <mat-form-field class="field">
-    <input matInput placeholder="Search a film" type="text" role="searchbox" aria-label="Search film box" (input)="onSearchTitleChange($event)" />
+    <label for="searchbox">Search Films</label>
+    <input matInput type="text" name="searchbox" id="searchbox" role="searchbox" (input)="onSearchTitleChange($event)" />
     <mat-icon matPrefix aria-hidden="true">search</mat-icon>
   </mat-form-field>
 
@@ -20,7 +21,7 @@
   <mat-card class="item" role="listitem" aria-label="Films items" *ngFor="let film of films | slice: startIndex: endIndex" >
     <mat-card-header>
     <mat-card-title class="title" aria-label="Film title">
-        <a class="link_details" href="javascript:void(0)"  (click)="openDetails(film)"> {{film.film.title}} </a>
+        <a class="link_details" href="javascript:void(0)" aria-label="Click link title film for open details" (click)="openDetails(film)"> <h2 tabindex="0"> {{film.film.title}} </h2></a>
       </mat-card-title>
     </mat-card-header>
 
@@ -32,14 +33,13 @@
       <p tabindex="0"><strong>Rating:</strong> {{ film.film.rating }}</p>
     </mat-card-content>
 
+
     <mat-card-actions align="end">
       <button mat-button aria-label="Rent film button price" role="button" title="Rent film button"  (click)="rent_page(film)">
-        <a tabindex="0">
-          <mat-icon>
+        <span tabindex="0"> <mat-icon>
           <span aria-hidden="true" style="font-size: 15px;">euro</span>
-          </mat-icon>
-          {{ film.film.rental_rate }} RENT
-        </a>
+          </mat-icon>{{ film.film.rental_rate }} RENT</span>
+
       </button>
     </mat-card-actions>
   </mat-card>
