--- a/rent_film/rent_film_app/src/app/rental-list/rental-list.component.html
+++ b/rent_film/rent_film_app/src/app/rental-list/rental-list.component.html
@@ -6,7 +6,7 @@
   <br>
   <br>
   <div class="button-container" *ngFor="let column of columns_title; let i = index">
-    <button mat-raised-button mat-button [matMenuTriggerFor]="menu">{{ column }}</button>
+    <button mat-raised-button mat-button [matMenuTriggerFor]="menu"><span> {{ column }}</span></button>
     <mat-menu #menu="matMenu">
       <button mat-menu-item role="menuitem" aria-label="Ascending order" (click)="sortData({ active: columns_action[i], direction: 'asc' })">Ascendente</button>
       <button mat-menu-item role="menuitem" aria-label="Descending order" (click)="sortData({ active: columns_action[i], direction: 'desc' })">Discendente</button>
@@ -43,7 +43,7 @@
 <!-- Colonna Dettagli -->
 <ng-container matColumnDef="action" tabindex="0">
   <th mat-header-cell *matHeaderCellDef class="custom-title" tabindex="0" > Action </th>
-  <td mat-cell *matCellDef="let rental"> <button mat-button class="button-details" (click)="openDetails(rental)" tabindex="0">Details</button>  </td>
+  <td mat-cell *matCellDef="let rental"> <button mat-button class="button-details" (click)="openDetails(rental)" tabindex="0"><span>Details</span></button>  </td>
 </ng-container>
 
 <!-- Definizione delle colonne -->
