--- a/rent_film/rent_film_app/src/app/app.component.html
+++ b/rent_film/rent_film_app/src/app/app.component.html
@@ -8,13 +8,13 @@
 </head>
 <body >
   <header >
-    <toolbar #toolbar class="component-style"></toolbar>
+    <toolbar #toolbar class="component-style" tabindex="0"></toolbar>
   </header>
 
 
   <main >
   <!--attiva la componente che verrà chiamata con router link -->
-  <router-outlet class="component-style" ></router-outlet>
+  <router-outlet class="component-style" tabindex="0" ></router-outlet>
   </main>
 
   <footer>
