--- a/rent_film/rent_film_app/src/app/rent-details/rent-details.component.html
+++ b/rent_film/rent_film_app/src/app/rent-details/rent-details.component.html
@@ -1,51 +1,49 @@
-<div class="component-style" tabindex="-1">
-  <mat-dialog-content  class="dialog-window"  role="dialog" >
+<div class="component-style" title="details rent dialog">
 
+  <mat-dialog-content  class="dialog-window"  role="dialog" >
 
     <mat-dialog-actions align="end">
       <button mat-button class="close" aria-label="Close dialog button" role="button" title="Button for close dialog" (click)="closeDialog()" >
         <mat-icon aria-hidden="true">close</mat-icon>
         Close
       </button>
-    </mat-dialog-actions>
+    </mat-dialog-actions><br>
 
+    <h2 mat-dialog-title id="{{ rent.film.title }}" class="title-dialog" tabindex="0" aria-describedby="dialog-description" >{{ rent.film.title }}</h2>
 
-  <br>
+    <mat-list class="list" id="dialog-description" role="list">
+      <mat-list-item role="listitem" >
+        <p tabindex="0" matListItemTitle><strong>Rental date start:</strong> {{ rent.rental.rental_date}}</p>
+      </mat-list-item>
 
-  <h2 mat-dialog-title id="{{ rent.film.title }}" class="title-dialog" tabindex="0" aria-describedby="dialog-description" >{{ rent.film.title }}</h2>
+      <mat-list-item role="listitem" >
+        <p tabindex="0" matListItemTitle><strong>Rental date end:</strong> {{ rent.rental.return_date}}
+        <span *ngIf="!rent.rental.return_date">Not returned yet</span> </p>
+      </mat-list-item>
 
-  <mat-list class="list" id="dialog-description" role="list">
-    <mat-list-item role="listitem" >
-      <p tabindex="0" matListItemTitle><strong>Rental date start:</strong> {{ rent.rental.rental_date}}</p>
-     </mat-list-item>
-
-     <mat-list-item role="listitem" >
-      <p tabindex="0" matListItemTitle><strong>Rental date end:</strong> {{ rent.rental.return_date}}
-      <span *ngIf="!rent.rental.return_date">Not returned yet!</span> </p>
-     </mat-list-item>
-
-     <mat-list-item role="listitem" >
-      <p tabindex="0" matListItemTitle><strong>Amount:</strong>  </p>
-        <a tabindex="0">
-          <mat-icon>
-          <span aria-hidden="true" style="font-size: 15px;">euro</span>
-          </mat-icon>
-          {{ rent.payment.amount}}
-        </a>
-     </mat-list-item>
-     <mat-list-item role="listitem" >
-      <p tabindex="0" matListItemTitle><strong>Payment Date:</strong>
-        {{ rent.payment.payment_date}}</p>
-     </mat-list-item>
-     <mat-list-item role="listitem"  lines="3">
-      <p tabindex="0" matListItemTitle><strong>Store information:</strong>
+      <mat-list-item role="listitem" >
+        <p tabindex="0" matListItemTitle><strong>Amount:</strong>
+          <a>
+            {{ rent.payment.amount}}
+            <mat-icon>
+              <span aria-hidden="true" style="font-size: 15px;">euro</span>
+            </mat-icon>
+          </a>
         </p>
-      <p tabindex="0" matListItemLine>Address: {{ rent.address.address}}</p>
-      <p tabindex="0" matListItemLine>City: {{ rent.city.city}}</p>
-     </mat-list-item>
-  </mat-list>
+      </mat-list-item>
+      <mat-list-item role="listitem" >
+        <p tabindex="0" matListItemTitle><strong>Payment Date:</strong>
+          {{ rent.payment.payment_date}}</p>
+      </mat-list-item>
+      <mat-list-item role="listitem"  lines="3">
+        <p tabindex="0" matListItemTitle><strong>Store information:</strong>
+          <a matListItemLine>Address: {{ rent.address.address}}</a>
+          <a matListItemLine>City: {{ rent.city.city}}</a>
+        </p>
+      </mat-list-item>
+    </mat-list>
 
-</mat-dialog-content>
+  </mat-dialog-content>
 
 </div>
 
