--- a/rent_film/rent_film_app/src/app/rent/rent.component.html
+++ b/rent_film/rent_film_app/src/app/rent/rent.component.html
@@ -1,4 +1,7 @@
-<div class="component-style"  fxLayout="column" fxLayoutAlign="center center" tabindex="-1">
+<div class="component-style" title="rent form content">
+  <button mat-button aria-label="Go back" class="back-button" (click)="navigateBack()"><span>Go back</span></button>
+
+
   <mat-card >
     <mat-card-title class="card-title" tabindex="0">
       <h2> <strong>{{film.film.title}}</strong> </h2>
