--- a/rent_film/rent_film_app/src/app/rent/rent.component.css
+++ b/rent_film/rent_film_app/src/app/rent/rent.component.css
@@ -2,16 +2,24 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  max-width: 600px;
   margin: 0 auto;
   margin-top: 30px;
-  padding: 20px;
+}
+
+.back-button {
+  position: absolute;
+  top: 70px;
+  left: 20px;
+  background-color: #001F99;
+  color:#EDEDED;
 }
 
 mat-card {
   width: 100%;
   padding: 20px;
   box-sizing: border-box;
+  margin-left: 250px;
+  margin-right: 250px;
 }
 
 .card-title {
@@ -50,6 +58,8 @@ button[type="submit"] {
 
   mat-card {
     padding: 10px;
+    margin-left: 100px;
+    margin-right: 100px;
   }
 
   .card-title {
