--- a/rent_film/rent_film_app/src/app/rental-list/rental-list.component.html
+++ b/rent_film/rent_film_app/src/app/rental-list/rental-list.component.html
@@ -1,54 +1,55 @@
-<div class="button-row"  >
-  <div class="serach-content">
-    <p tabindex="0"><strong>Total cost:</strong> {{ totalAmount}}</p>
-  </div>
-  <span style="text-align: center;" tabindex="0">Choose a column to sort by:  </span>
+<div class="button-row" title="list rent customer content" >
+  <button mat-button aria-label="Go back" class="back-button" (click)="navigateBack()"><span>Go back</span></button>
+
+  <p tabindex="0"><strong>Total cost:</strong> {{ totalAmount}}</p>
+  <span style="text-align: center;" tabindex="0">Choose one of the follow column to sort by:  </span>
   <br>
   <br>
+
   <div class="button-container" *ngFor="let column of columns_title; let i = index">
     <button mat-raised-button mat-button [matMenuTriggerFor]="menu"><span> {{ column }}</span></button>
     <mat-menu #menu="matMenu">
-      <button mat-menu-item role="menuitem" aria-label="Ascending order" (click)="sortData({ active: columns_action[i], direction: 'asc' })">Ascendente</button>
-      <button mat-menu-item role="menuitem" aria-label="Descending order" (click)="sortData({ active: columns_action[i], direction: 'desc' })">Discendente</button>
+      <button mat-menu-item role="menuitem" aria-label="Ascending order" (click)="sortData({ active: columns_action[i], direction: 'asc' })"><span>Ascendent</span></button>
+      <button mat-menu-item role="menuitem" aria-label="Descending order" (click)="sortData({ active: columns_action[i], direction: 'desc' })"><span>Descendent</span></button>
     </mat-menu>
   </div>
+  <br>
+  <br>
+
+  <table class="table" role="table" mat-table [dataSource]="rentals" matSort  (matSortChange)="sortData($event)" aria-label="rentals table" >
+  <!-- Colonna Film -->
+  <ng-container matColumnDef="film" tabindex="0">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header class="custom-title" > Film </th>
+    <td mat-cell *matCellDef="let rental" class="custom-column" tabindex="0"> {{ rental.film.title }} </td>
+  </ng-container>
+
+  <!-- Colonna Indirizzo -->
+  <ng-container matColumnDef="address" tabindex="0">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header class="custom-title" > Address </th>
+    <td mat-cell *matCellDef="let rental"class="custom-column" tabindex="0"> {{ rental.address.address }} </td>
+  </ng-container>
+
+  <!-- Colonna Pagamento -->
+  <ng-container matColumnDef="payment" tabindex="0">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header class="custom-title" > Payment </th>
+    <td mat-cell *matCellDef="let rental" class="custom-column" tabindex="0"> {{ rental.payment.amount }} {{ rental.payment.currency }} </td>
+  </ng-container>
+
+  <!-- Colonna Noleggio -->
+  <ng-container matColumnDef="rental" tabindex="0">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header class="custom-title" >Data</th>
+    <td mat-cell *matCellDef="let rental" class="custom-column" tabindex="0"> {{ rental.rental.rental_date }} </td>
+  </ng-container>
+
+  <!-- Colonna Dettagli -->
+  <ng-container matColumnDef="action" tabindex="0">
+    <th mat-header-cell *matHeaderCellDef class="custom-title" tabindex="0" > Action </th>
+    <td mat-cell *matCellDef="let rental"> <button mat-button class="button-details" (click)="openDetails(rental)" tabindex="0"><span>Details</span></button>  </td>
+  </ng-container>
+
+    <!-- Definizione delle colonne -->
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let rental; columns: displayedColumns;"></tr>
+  </table>
+
 </div>
-
-<section class="table-container"  >
-<table class="table" role="table" mat-table [dataSource]="rentals" matSort  (matSortChange)="sortData($event)" aria-label="rentals table" >
-<!-- Colonna Film -->
-<ng-container matColumnDef="film" tabindex="0">
-  <th mat-header-cell *matHeaderCellDef mat-sort-header class="custom-title" > Film </th>
-  <td mat-cell *matCellDef="let rental" class="custom-column" tabindex="0"> {{ rental.film.title }} </td>
-</ng-container>
-
-<!-- Colonna Indirizzo -->
-<ng-container matColumnDef="address" tabindex="0">
-  <th mat-header-cell *matHeaderCellDef mat-sort-header class="custom-title" > Address </th>
-  <td mat-cell *matCellDef="let rental"class="custom-column" tabindex="0"> {{ rental.address.address }} </td>
-</ng-container>
-
-<!-- Colonna Pagamento -->
-<ng-container matColumnDef="payment" tabindex="0">
-  <th mat-header-cell *matHeaderCellDef mat-sort-header class="custom-title" > Payment </th>
-  <td mat-cell *matCellDef="let rental" class="custom-column" tabindex="0"> {{ rental.payment.amount }} {{ rental.payment.currency }} </td>
-</ng-container>
-
-<!-- Colonna Noleggio -->
-<ng-container matColumnDef="rental" tabindex="0">
-  <th mat-header-cell *matHeaderCellDef mat-sort-header class="custom-title" >Data</th>
-  <td mat-cell *matCellDef="let rental" class="custom-column" tabindex="0"> {{ rental.rental.rental_date }} </td>
-</ng-container>
-
-<!-- Colonna Dettagli -->
-<ng-container matColumnDef="action" tabindex="0">
-  <th mat-header-cell *matHeaderCellDef class="custom-title" tabindex="0" > Action </th>
-  <td mat-cell *matCellDef="let rental"> <button mat-button class="button-details" (click)="openDetails(rental)" tabindex="0"><span>Details</span></button>  </td>
-</ng-container>
-
-<!-- Definizione delle colonne -->
-<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-<tr mat-row *matRowDef="let rental; columns: displayedColumns;"></tr>
-</table>
-
-</section>
